JSW Devsb/src/objects/Target_Child__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <formula>Customer_Name__r.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target Child</relationshipLabel>
        <relationshipName>Target_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <formula>Text(Customer_Name__r.Distribution_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature__c</fullName>
        <label>Nature</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Dealers__c</fullName>
        <label>No. of New Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Promoter</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Target Child</relationshipLabel>
        <relationshipName>Target_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <formula>DATE( VALUE(Year__c) , 
CASE( Month__c, 
&quot;January&quot;, 1, 
&quot;February&quot;, 2, 
&quot;March&quot;, 3, 
&quot;April&quot;, 4, 
&quot;May&quot;, 5, 
&quot;June&quot;, 6, 
&quot;July&quot;, 7, 
&quot;August&quot;, 8, 
&quot;September&quot;, 9, 
&quot;October&quot;, 10, 
&quot;November&quot;, 11, 
12) ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targets__c</fullName>
        <label>Targets</label>
        <referenceTo>Targets__c</referenceTo>
        <relationshipLabel>Target Child</relationshipLabel>
        <relationshipName>Target_Child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Target Child</relationshipLabel>
        <relationshipName>Target_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <formula>Targets__r.OwnerId +&apos;:&apos;+ Targets__r.Territory__c +&apos;:&apos;+ Product_Group__c +&apos;:&apos;+ Month__c +&apos;:&apos;+ Year__c +&apos;:&apos;+ Customer_Name__c +&apos;:&apos;+ TEXT(Nature__c) +&apos;:&apos;+ TEXT(Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>Year__c +&apos;:&apos;+ Month__c +&apos;:&apos;+ Distribution_Channel__c +&apos;:&apos;+ Customer_Code__c +&apos;:&apos;+ Sales_Promoter__c +&apos;:&apos;+ Product_Group__c +&apos;:&apos;+ Targets__c</formula>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Target Child</label>
    <nameField>
        <displayFormat>CTGT-{00000000}</displayFormat>
        <label>Target Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Child</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>